fixed horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 *{
     box-sizing: border-box;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
+html, body {
+    overflow-x: hidden;
+}
 
 
 /* shared style */
@@ -32,10 +39,11 @@
     display: flex;
     justify-content: space-between;
     gap: 34px;
-    margin-left: 120px;
-    margin-right: 120px;
-    margin-top: 87px;
+    margin: 80px auto;
     align-items: center;
+    max-width: 1200px;
+    padding: 0 16px;
+
 }
 
 .nav-title h4 {
@@ -107,6 +115,11 @@
     gap: 60px;
     align-items: center;
  }
+ .online-4,
+.online-3 {
+    flex-wrap: wrap;   /* NOT nowrap */
+}
+
 
 /* card related style */
  .popular {
@@ -131,8 +144,8 @@
     align-items: center;
     text-align: left;
     /* border: 1px solid red; */
-    margin-left: 45px;
-    margin-right: 30px;
+    /* margin-left: 45px;
+    margin-right: 30px; */
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.377);
     border-radius: 10px;
  }
